kub8s/quotes-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quotes-ingress
  annotations:
    konghq.com/strip-path: "false"
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /quotes
            pathType: Prefix
            backend:
              service:
                name: quotes-api-svc
                port:
                  number: 80
